# text-analyzer-app

./: .gitignore  CMakeLists.txt  README.md  main.cpp
android/: AndroidManifest.xml
icons/: icons.qrc
qml/: Main.qml  qml.qrc
qml/Config/: ColorConfig.qml  Constants.qml  SizeConfig.qml  qmldir
qml/Controls/: BasicButton.qml  Histogram.qml  Table.qml
qml/Pages/: PageMain.qml  PageProceed.qml  PageStart.qml
src/: fileprocessorcontroller.cpp  fileprocessorcontroller.h  wordcountmodel.cpp  wordcountmodel.h
