cmake_minimum_required(VERSION 3.16)

project(TextAnalyzer VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTORCC ON)

find_package(Qt6 6.4 REQUIRED COMPONENTS Quick)

qt_standard_project_setup()

qt_add_executable(appTextAnalyzer
    main.cpp
    src/fileprocessorcontroller.h
    src/fileprocessorcontroller.cpp
    src/wordcountmodel.h
    src/wordcountmodel.cpp
)

qt_add_qml_module(appTextAnalyzer
    URI
        TextAnalyzer
    VERSION
        1.0
    RESOURCES
        qml/qml.qrc
        icons/icons.qrc
)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
set_target_properties(appTextAnalyzer PROPERTIES
#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appTextAnalyzer
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(appTextAnalyzer
    PRIVATE Qt6::Quick
)

include(GNUInstallDirs)
install(TARGETS appTextAnalyzer
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
